--- a/src/style/index.css
+++ b/src/style/index.css
@@ -107,3 +107,11 @@ ul {
   height: 40px;
   font-size: large;
 }
+
+.footer {
+  text-align: center;
+  background-color: #f7f7f7;
+  color: #a2a2a2;
+  padding: 20px;
+  border: 1px outset #f8f8f8;
+}
