--- a/src/style/index.css
+++ b/src/style/index.css
@@ -48,9 +48,14 @@ ul {
 
 .articles {
   display: flex;
-  align-content: flex-start;
+  align-items: flex-start;
   flex-wrap: wrap;
   padding-left: 50px;
+  gap: 30px
+}
+
+.article-third {
+  margin-top: -200px;
 }
 
 .img {
@@ -60,7 +65,6 @@ ul {
 
 .article {
   flex: 0 0 45%;
-  margin: 10px;
   border: 1px solid;
 }
 
@@ -72,7 +76,7 @@ ul {
   display: flex;
   align-items: center;
   justify-content: center;
-
+  margin-left: -100px;
 }
 
 .loginBox {
